force-app/main/default/objects/AgriEdge_Inventory__c/AgriEdge_Inventory__c.object-meta.xml
<CustomObject>
    <description>Tracks available product inventory for AgriEdge.</description>
    <label>AgriEdge Inventory</label>
    <nameField>
        <label>Inventory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AgriEdge Inventory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>