force-app/main/default/objects/AgriEdge_Inventory__c/fields/Stock_Status__c.field-meta.xml
<CustomField>
    <fullName>Stock_Status__c</fullName>
    <formula>IF(Stock_Quantity__c &lt;= Reorder_Level__c, "Low", "Sufficient")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stock Status</label>
    <type>Text</type>
</CustomField>