force-app/main/default/objects/AgriEdge_Inventory__c/validationRules/Inventory_Record_Alert.validationRule-meta.xml
<ValidationRule>
    <active>true</active>
    <description>Alerts users when stock is at or below reorder level.</description>
    <errorConditionFormula>Stock_Quantity__c &lt;= Reorder_Level__c</errorConditionFormula>
    <errorDisplayField></errorDisplayField>
    <errorMessage>Stock is below reorder level. Please restock.</errorMessage>
</ValidationRule>